service.yaml

apiVersion: v1
kind: Service
metadata:
  name: my-portfolio-service
spec:
  selector:
    app: my-portfolio
  ports:
    - protocol: TCP
      port: 31000
      targetPort: 80
