ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-portfolio-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: my-portfolio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-portfolio-service                 
            port:
              number: 31000
